--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class=" container">
     hello
     <div class="box">
-      <h1 class="tap1">me and you today 1</h1>
+      <h1 class="tap1">me and you today </h1>
       <h1 class="tap2">me and you today 2</h1>
       <h1 class="tap3">me and you today 3</h1>
     </div>
