--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 
 <body>
-  <h1 class="village-people" style="font-size: 8em; text-align: center; margin-top: 0;">Hello!!</h1>
+  <h2 class="village-people" style="font-size: 8em; text-align: center; margin-top: 0;">Hello!!</h2>
   <h2>
   I am Oyinkasola Moradeyo and I am happy to meet you 😄
   </h2>
   <div class=" container">
-   <img src="https://bykelaw/github.io/WhatsApp Image 2020-08-11 at 23.17.51;jpeg" alt="Oyinka">
+   <img src="https://bykelaw/github.io/WhatsApp Image 2020-08-11 at 23.17.51.jpeg" alt="Oyinka">
     </div>
   </div>
 </body>
