--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   I am Oyinkasola Moradeyo and I am happy to meet you 😄
   </h2>
   <div class=" container">
-   <img src="https://bykelaw/github.io/oyinks.jpeg" alt="Oyinka">
+   <img src="./oyinks.jpeg" alt="Oyinka">
     </div>
   </div>
 </body>
