--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 
 <body>
   <h2 class="village-people" style=" text-align: center; margin-top: 0;">Hello!!</h2>
-  <h2>
-  I am Oyinkasola Moradeyo and I am happy to meet you 😄
+  <h2 style="text-align: center;">
+  I am Oyinkansola Moradeyo and I am happy to meet you 😄
   </h2>
+  <p>❤️❤️❤️Thank you so much for the correction ❤️❤️❤️❤️</p>
   <div class=" container">
    <img src="./oyinks.jpeg" alt="Oyinka">
     </div>
