added some cool stuffs

--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>transition</title>
+  <title>Adding Images in Github Page</title>
   <link rel="stylesheet" href="https://bykelaw/github.io/style.css">
 </head>
 
 <body>
-  <h2 class="village-people" style=" text-align: center; margin-top: 0;">Hello!!</h2>
+  <h1 class="village-people" style=" text-align: center; margin-top: 0;">I would like to introduce you to a very lovely friend of mine  <em>Oyinks😉</em> whose is wearing a very broad smile</h1>
+  <div class="container">
+    <img src="./oyinks.jpeg" alt="Oyinka">
+  </div>
   <h2 style="text-align: center;">
-  I am Oyinkansola Moradeyo and I am happy to meet you 😄
+    I am Oyinkansola Moradeyo and I am happy to meet you 😄
   </h2>
-  <p>❤️❤️❤️Thank you so much for the correction ❤️❤️❤️❤️</p>
-  <div class=" container">
-   <img src="./oyinks.jpeg" alt="Oyinka">
-    </div>
+  <small>❤️❤️❤️Thank you so much for the correction and for permitting me to use you picture for this exercise. It has really been fun connecting with you during this long break thanks for every thing❤️❤️❤️❤️</small>
   </div>
 </body>
