--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1 class="village-people" style=" text-align: center; margin-top: 0;">I would like to introduce you to a very lovely friend of mine  <em>Oyinks😉</em> whose is wearing a very broad smile</h1>
+  <h1 class="village-people" style=" text-align: center; margin-top: 0;">I would like to introduce you to a very lovely friend of mine  <em>Oyinks😉</em> who is wearing a very broad smile</h1>
   <div class="container">
     <img src="./oyinks.jpeg" alt="Oyinka">
   </div>
